[Hotfix] Visual field length and Mock Standalone Image (#72)
* fix: visual field length and mock standalone image

* fix: application init models

* fix: link to owner id for image generation

* perf: disable model validation for mock

* refactor: remove fields from slide dtos to use jsonany

* fix: test

* fix: test

* fix: mindmap response